# video-processing-backend

./: .env.example  .gitignore  Dockerfile  PLAN.md  README.md  SCHEMA.md  add_timestamp_columns.py  alembic.ini  create_tables.py  ddialog.db  docker-compose.yml  env.example  ffmpeg_docs.md  hello.py  pyproject.toml  query_processed.py  tempCodeRunnerFile.py  test_connections.py  test_overlay.py
app/: celery_app.py  config.py  database.py  main.py  tasks.py
app/api/: deps.py
app/api/endpoints/: jobs.py  processing.py  upload.py
app/models/: __init__.py  video.py
app/schemas/: __init__.py  video.py
app/services/: ffmpeg_service.py  video_service.py
app/tasks/: __init__.py  echo.py  video.py
app/utils/: ffmpeg_runner.py
migrations/: env.py
migrations/versions/: 001_initial_schema.py
